@@ -67,6 +67,10 @@ $_lang['articles.container_undelete'] = 'Undelete Articles Container';
 $_lang['articles.container_unpublish'] = 'Unpublish Articles Container';
 $_lang['articles.content'] = 'Content';
 $_lang['articles.filter_ellipsis'] = 'Filter...';
+$_lang['articles.import_blogger_file'] = 'Blogger Export XML File';
+$_lang['articles.import_blogger_file_desc'] = 'Select the Blogger XML file that you get when you export from Blogger.';
+$_lang['articles.import_blogger_file_server'] = 'Blogger Export XML File on Server';
+$_lang['articles.import_blogger_file_server_desc'] = 'Or, alternatively, specify an absolute path to the Blogger XML file that you get when you export from Blogger that is located on your server. You may use {core_path}, {base_path} and {assets_path} as placeholders.';
 $_lang['articles.import_modx_commentsThreadNameFormat'] = 'Quip Thread Name Format';
 $_lang['articles.import_modx_commentsThreadNameFormat_desc'] = 'The name format (such as "blog-post-[[*id]]") that you set for the thread property for Quip. Use [[*id]] to replace with the imported Resource\'s ID. Leave blank to not import comments.';
 $_lang['articles.import_modx_intro'] = 'This will import content, tags and comments from existing MODX Resources. Note that this does not import any content outside of the main content field, comments and the tags field.';
@@ -87,6 +91,8 @@ $_lang['articles.import_service'] = 'Import From';
 $_lang['articles.import_service_desc'] = 'Select the Service or Application that you would like to import from.';
 $_lang['articles.import_wp_file'] = 'WordPress Export WXR File';
 $_lang['articles.import_wp_file_desc'] = 'Select the WordPress WXR (XML) file that you get when you export from WordPress.';
+$_lang['articles.import_wp_file_server'] = 'WordPress Export WXR File on Server';
+$_lang['articles.import_wp_file_server_desc'] = 'Or, alternatively, specify an absolute path to the WordPress WXR (XML) file that you get when you export from WordPress that is located on your server. You may use {core_path}, {base_path} and {assets_path} as placeholders.';
 $_lang['articles.publishedon'] = 'Published On';
 $_lang['articles.published'] = 'Published';
 $_lang['articles.publishing_information'] = 'Publishing Information';
